.provarCaches/00D5f000005vwGkEAI/objects/rstk__drplog__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_drplog</customHelpPage>
    <description>drplog__c</description>
    <fields>
        <fullName>rstk__error__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__errormessage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Error Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreplenish__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Replenishment</label>
        <referenceTo>rstk__icreplenish__c</referenceTo>
        <relationshipLabel>DRP Log</relationshipLabel>
        <relationshipName>drplogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__log__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>DRP Log</label>
    <listViews>
        <fullName>rstk__RS_DRP_Log</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstk__icreplenish__c</columns>
        <columns>rstk__error__c</columns>
        <columns>rstk__errormessage__c</columns>
        <columns>rstk__log__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>DRP Log</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DRP Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>